Product Files made

--- a/html/index.html
+++ b/html/index.html
@@ -4,17 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bharat-Vedica</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
-    <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bharat-vedica</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
+    <link rel="stylesheet" href="../css/style.css">
+</head>   
 <body>
     <nav class="navbar">
         <div class="logo">
@@ -29,6 +20,9 @@
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
+    <h1>Organic Millets</h1>
+    <p>Tiny Millets, Mighty Nutrition: Bharat Vedica Organic Millets</p>
+    <p>Unlock a world of flavor and nutrition with Bharat Vedica's organic millets. These tiny grains are packed with goodness, offering a versatile and delicious way to enhance your health and well-being. Explore the power of ancient grains!</p>
    
 
 
