Front-Page Updated

--- a/html/index.html
+++ b/html/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bharat-Vedica</title>
     <link rel="stylesheet" href="../css/style.css">
+   
 </head>   
 <body>
     <nav class="navbar">
@@ -20,13 +21,12 @@
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
-    <h1>Organic Millets</h1>
+    <!-- <h1>Organic Millets</h1>
     <p>Tiny Millets, Mighty Nutrition: Bharat Vedica Organic Millets</p>
-    <p>Unlock a world of flavor and nutrition with Bharat Vedica's organic millets. These tiny grains are packed with goodness, offering a versatile and delicious way to enhance your health and well-being. Explore the power of ancient grains!</p>
-   
+    <p>Unlock a world of flavor and nutrition with Bharat Vedica's organic millets. These tiny grains are packed with goodness, offering a versatile and delicious way to enhance your health and well-being. Explore the power of ancient grains!</p> -->
 
+    <div  class="background-img"></div>
 
-
-    <script src="script.js"></script>
+    
 </body>
 </html>
