create account page

--- a/html/login.html
+++ b/html/login.html
@@ -23,7 +23,11 @@
         <label>Email Address</label>
         <div class="input-box">
             <span class="input-icon">📧</span>
+            <input type="name" placeholder="abc" required />
+            <span class="input-icon">📧</span>
             <input type="email" placeholder="you@example.com" required />
+            <span class="input-icon">📧</span>
+            <input type="number" placeholder="9588XXXXXX" required />
         </div>
 
         <label>Password</label>
