--- a/main.html
+++ b/main.html
@@ -20,6 +20,7 @@
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
             <li><a href="./html/login.html">login</a></li>
+            <li><a href="./html/signup.html">signup</a></li>
         </ul>
     </nav>
     <div class="background-img"></div>
