--- a/html/login.html
+++ b/html/login.html
@@ -19,15 +19,11 @@
     <h1>Fresh & Organic</h1>
     <p class="subtitle">Welcome back! Sign in to your account</p>
 
-    <form>
+    <form id="loginForm" action="../main.html#home" method="get">
         <label>Email Address</label>
         <div class="input-box">
             <span class="input-icon">📧</span>
-            <input type="name" placeholder="abc" required />
-            <span class="input-icon">📧</span>
             <input type="email" placeholder="you@example.com" required />
-            <span class="input-icon">📧</span>
-            <input type="number" placeholder="9588XXXXXX" required />
         </div>
 
         <label>Password</label>
@@ -40,13 +36,13 @@
     </form>
 
     <p class="signup-text">
-        Don't have an account? <a href="#">Sign up for free</a>
+        Don't have an account? <a href="./signup.html">Sign up for free</a>
     </p>
 
     <p class="footer-text">
         🌱 100% Organic · Farm Fresh · Sustainably Sourced
     </p>
 </div>
-
+    <script src="../js/script.js"></script>
 </body>
 </html>
