--- a/main.html
+++ b/main.html
@@ -19,8 +19,7 @@
             <li><a href="./html/products.html">Products</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li><a href="./html/login.html">login</a></li>
-            <li><a href="./html/signup.html">signup</a></li>
+            <li><a href="./html/login.html">login/SignUp</a></li>
         </ul>
     </nav>
     <div class="background-img"></div>
@@ -44,7 +43,7 @@
     <div class="about-content">
       <span class="about-tag">Organic • Local • Sustainable</span>
 
-      <h2 class="about-title">Your Store Name — Pure Food, Honest Farming.</h2>
+      <h2 class="about-title">BharatVedica — Pure Food, Honest Farming.</h2>
 
       <p class="about-text">
         We bring you fresh, chemical-free produce and pantry essentials sourced directly 
@@ -84,10 +83,6 @@
 
   </div>
 </section>
-
-    <!-- <h1>Organic Millets</h1>
-    <p>Tiny Millets, Mighty Nutrition: Bharat Vedica Organic Millets</p>
-    <p>Unlock a world of flavor and nutrition with Bharat Vedica's organic millets. These tiny grains are packed with goodness, offering a versatile and delicious way to enhance your health and well-being. Explore the power of ancient grains!</p> -->
 
     <footer class="site-footer">
   <div id="contact" class="footer-top">
@@ -154,6 +149,7 @@
     <a>Shipping Policy</a> - <a>Refund Policy</a> - <a>Terms and Conditions</a> - <a>Privacy Policy</a>
   </div>
 </footer>
+<script src="../js/script.js"></script>
   
 </body>
 </html>
